# SistemaVendasConcessionaria

./: README.md  estoque.csv  sistema.cpp
SistemaVendasDriveTech/: CMakeLists.txt  janelacadastrarcliente.cpp  janelacadastrarcliente.h  janelacadastrarcliente.ui  janelaconsultarestoque.cpp  janelaconsultarestoque.h  janelaconsultarestoque.ui  janeladelogin.cpp  janeladelogin.h  janeladelogin.ui  janelalistarvendas.cpp  janelalistarvendas.h  janelalistarvendas.ui  janelaprincipal.cpp  janelaprincipal.h  janelaprincipal.ui  janelaregistrarvenda.cpp  janelaregistrarvenda.h  janelaregistrarvenda.ui  main.cpp
SistemaVendasDriveTech/backend/: descontostrategy.cpp  descontostrategy.h  gerenciadordrivetech.cpp  gerenciadordrivetech.h  pessoa.cpp  pessoa.h  veiculo.cpp  veiculo.h  venda.cpp  venda.h
